# MiniC-IDE

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: release-local.md
scripts/: release-local.ps1
src/: App.css  App.tsx  tauriEnv.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/resources/mingw/: README.md
src-tauri/src/: lib.rs  main.rs
src/components/: ContextMenu.css  ContextMenu.tsx  EditorPane.css  EditorPane.tsx  FileIcons.tsx  FileTree.css  FileTree.tsx  FindReplace.css  FindReplace.tsx  MenuBar.css  MenuBar.tsx  OutputPanel.css  OutputPanel.tsx  StatusBar.css  StatusBar.tsx  TabBar.css  TabBar.tsx  Terminal.css  Terminal.tsx
src/store/: ideStore.ts
src/types/: index.ts
src/utils/: formatCode.ts  language.ts
