[package]
name = "minic-ide"
version = "1.3.0"
description = "MiniC IDE"
authors = ["MCMR"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "minic_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.4.5"
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.6.0"
encoding_rs = "0.8"
portable-pty = "0.8"
chardetng = "1.0.0"
base64 = "0.22"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.10.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Globalization",
  "Win32_Storage_FileSystem",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
] }
